fixed some size and spacing issues

--- a/signup.css
+++ b/signup.css
@@ -16,9 +16,10 @@ form {
 	margin-right: auto;
 	padding: 20px 40px;
 	background-color: white;
+	border-radius: 1%;
 }
 
-h1, form a {
+h1, .forgot, .forgot a {
 	text-align: center;
 	color: #5e5b57;
 	font-weight: normal;
@@ -26,6 +27,10 @@ h1, form a {
 
 fieldset {
 	border: none;
+}
+
+label {
+	margin-left: -15px;
 }
 
 input {
@@ -39,11 +44,28 @@ input {
 	padding: 15px;
 }
 
+input, button {
+	font-size: 1em;
+}
+
 button {
 	height: 55px;
 	width: 320px;
 	color: white;
 	background-color: #11cd72;
+	font-weight: bold;
+}
+
+button:hover {
+	background-color: darkgreen;
+}
+
+.forgot a {
+	margin-top: 10px;
+}
+
+.forgot a:hover {
+	text-decoration: none;
 }
 
 .login {
